--- a/custom_purchase_order/views/purchase_order.xml
+++ b/custom_purchase_order/views/purchase_order.xml
@@ -19,26 +19,28 @@
             <field name="model">purchase.order.line</field>
             <field name="priority" eval="20"/>
             <field name="arch" type="xml">
-                <form string="Purchase Order Line" create="false" edit="false">
+                <form string="Purchase Order Line">
                     <sheet>
                        <group>
                            <group>
-                                <field name="product_id"/>
+                                <field name="product_id" readonly="1"/>
                             </group>
                         </group>
                         <group>
-                           <group>
-                                <field name="invoice_id"/>
-                                <field name="partner_id"/>
-                                <field name="order_id"/>
-                                <field name="date_order"/>
-                            </group>
-                           <group>
-                                <field name="date_invoice"/>
-                                <field name="product_qty"/>
-                                <field name="qty_received"/>
-                                <field name="price_unit"/>
-                            </group>
+                            <field name="purchase_query_ids" nolabel="1">
+                                <tree>
+                                    <field name="invoice_name"/>
+                                    <field name="date_invoice"/>
+                                    <field name="partner_id" readonly="1"/>
+                                    <field name="name"/>
+                                    <field name="create_date"/>
+                                    <field name="product_query"/>
+                                    <field name="product_qty"/>
+                                    <field name="qty_received"/>
+                                    <field name="price_unit"/>
+                                    <field name="bodeg"/>
+                                </tree>
+                            </field>
                         </group>
                     </sheet>
                 </form>
